# google_test_experiment

./: .gitignore  CMakeLists.txt  README.md
include/folder1/: file1.h  file2.h
include/folder2/: file3.h  file4.h
src/: CMakeLists.txt  main.c
src/folder1/: file1.c  file2.c
src/folder2/: file3.c  file4.c
test/: CMakeLists.txt  TestFile1.cpp  TestFile2.cpp  TestFile3.cpp  TestFile4.cpp
